@@ -320,6 +320,8 @@ static tree handle_common_attribute (tree *, tree, tree, int, bool *);
 static tree handle_noreturn_attribute (tree *, tree, tree, int, bool *);
 static tree handle_hot_attribute (tree *, tree, tree, int, bool *);
 static tree handle_cold_attribute (tree *, tree, tree, int, bool *);
+static tree handle_no_sanitize_address_attribute (tree *, tree, tree,
+						  int, bool *);
 static tree handle_no_address_safety_analysis_attribute (tree *, tree, tree,
 							 int, bool *);
 static tree handle_noinline_attribute (tree *, tree, tree, int, bool *);
@@ -725,6 +727,9 @@ const struct attribute_spec c_common_attribute_table[] =
   { "no_address_safety_analysis",
 			      0, 0, true, false, false,
 			      handle_no_address_safety_analysis_attribute,
+			      false },
+  { "no_sanitize_address",    0, 0, true, false, false,
+			      handle_no_sanitize_address_attribute,
 			      false },
   { "warning",		      1, 1, true,  false, false,
 			      handle_error_attribute, false },
@@ -6088,12 +6093,12 @@ handle_cold_attribute (tree *node, tree name, tree ARG_UNUSED (args),
   return NULL_TREE;
 }
 
-/* Handle a "no_address_safety_analysis" attribute; arguments as in
+/* Handle a "no_sanitize_address" attribute; arguments as in
    struct attribute_spec.handler.  */
 
-static tree
-handle_no_address_safety_analysis_attribute (tree *node, tree name, tree ARG_UNUSED (args), 
-					     int ARG_UNUSED (flags), bool *no_add_attrs)
+static tree 
+handle_no_sanitize_address_attribute (tree *node, tree name, tree ARG_UNUSED (args),
+                                      int ARG_UNUSED (flags), bool *no_add_attrs)
 {
   if (TREE_CODE (*node) != FUNCTION_DECL)
     {
@@ -6101,6 +6106,23 @@ handle_no_address_safety_analysis_attribute (tree *node, tree name, tree ARG_UNU
       *no_add_attrs = true;
     }
 
+  return NULL_TREE;
+}
+
+/* Handle a "no_address_safety_analysis" attribute; arguments as in
+   struct attribute_spec.handler.  */
+
+static tree 
+handle_no_address_safety_analysis_attribute (tree *node, tree name, tree ARG_UNUSED (args),
+                                             int ARG_UNUSED (flags), bool *no_add_attrs)
+{
+  if (TREE_CODE (*node) != FUNCTION_DECL)
+    warning (OPT_Wattributes, "%qE attribute ignored", name);
+  else if (!lookup_attribute ("no_sanitize_address", DECL_ATTRIBUTES (*node)))
+    DECL_ATTRIBUTES (*node)
+      = tree_cons (get_identifier ("no_sanitize_address"),
+		   NULL_TREE, DECL_ATTRIBUTES (*node));
+  *no_add_attrs = true;
   return NULL_TREE;
 }
 
