@@ -3,6 +3,16 @@
 	* c-ubsan.c: New file.
 	* c-ubsan.h: New file.
 
+2013-02-28  Konstantin Serebryany  <konstantin.s.serebryany@gmail.com>
+	    Jakub Jelinek  <jakub@redhat.com>
+
+	PR sanitizer/56454
+	* c-common.c (handle_no_sanitize_address_attribute): New function.
+	(c_common_attribute_table): Add no_sanitize_address attribute.
+	(handle_no_address_safety_analysis_attribute): Add
+	no_sanitize_address attribute, not no_address_safety_analysis
+	attribute.
+
 2012-12-03  Marek Polacek  <polacek@redhat.com>
 
 	PR c/55570
